--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -54,8 +54,7 @@
            padding: 15px;
        }
 
-       input[type=search],
-       textarea {
+       input[type=search] {
             padding: 10px;
        }
 
