--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -5,13 +5,17 @@
     <div>
         <h4>Welcome, {{ user }}!</h4>
         <h2> To Do App Version 2 </h2>
+        <h5> You have {{ count }} incomplete task{{ count|pluralize:"s" }}! </h5>
     </div>
-    <a href="{% url 'logout' %}">Logout</a>
+
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a> {% else %} 
+    <a href="{% url 'login' %}">Login</a> {% endif %}
 </div>
 
 <div id="search-add-wrapper">
-    <form method="GET">
-        <input type="search" name="q" placeholder="Search...">
+    <form method="get">
+        <input type="search" name="serach-bar" placeholder="Search...">
         <input class="button" type="Submit" value="Search">
     </form>
     <a id="add-link" href="{% url 'create' %}">&#x2b;</a>
@@ -33,6 +37,10 @@
         {% endif %}
         <a class="delete-link" href="{% url 'delete' task.id %}">&#215;</a>
     </div>
+{% empty %}
+
+<h2 class="no-tasks-message">No tasks detected</h2>
+
 {% endfor %}
 
 
