fixed syntax error in search feature

--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -15,7 +15,7 @@
 
 <div id="search-add-wrapper">
     <form method="get">
-        <input type="search" name="serach-bar" placeholder="Search...">
+        <input type="search" name="search-bar" placeholder="Search...">
         <input class="button" type="Submit" value="Search">
     </form>
     <a id="add-link" href="{% url 'create' %}">&#x2b;</a>
